--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
-    "@types/react": "^18.2.15",
+    "@material-tailwind/react": "2.1.0",
+    "@types/react": "18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -30,7 +31,7 @@
     "postcss": "^8.4.31",
     "sass": "^1.69.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
+    "typescript": "5.2.2",
     "vite": "^4.4.5"
   }
 }
