--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "2.1.0",
-    "@types/react": "18.2.21",
+    "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
