--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "apexcharts": "^3.43.2-0",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.3.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
+    "react-apexcharts": "^1.4.1",
     "sass": "^1.69.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2",
