--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.5",
     "viem": "^1.16.2"
   },
   "devDependencies": {
