--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "^8.4.31",
     "react-apexcharts": "^1.4.1",
     "sass": "^1.69.1",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2",
     "vite": "^4.4.5"
