--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "alchemy-sdk": "^2.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.5",
+    "tsparticles": "^2.12.0",
     "viem": "^1.16.2"
   },
   "devDependencies": {
