--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.12.2",
+    "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.5",
     "tsparticles": "^2.12.0",
