--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "alchemy-sdk": "^2.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.1",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
